--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "golem-base-test-utils"
+name = "arkiv-test-utils"
 version = "0.1.0"
 edition = "2024"
 
@@ -10,9 +10,9 @@ alloy = { version = "1.0.24", features = [
   "signer-keystore",
 ] }
 anyhow = "1.0"
+arkiv-sdk = { workspace = true }
 bigdecimal = "0.4"
 dirs = "6.0.0"
-golem-base-sdk = { workspace = true }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 url = "2.5.4"
