--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   run-examples:
     runs-on: ubuntu-latest
@@ -15,9 +18,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v31
+        uses: DeterminateSystems/nix-installer-action@main
 
-      - name: Setup Go and Arkiv
+      - name: Setup Go and Golem Base
         uses: ./.github/workflows/setup
 
       # TODO: This could probably just be a derivation
@@ -31,11 +34,11 @@ jobs:
       - name: Check out the SDK repo
         uses: actions/checkout@v4
 
-      - name: Setup Go, Rust and Arkiv
+      - name: Setup Go, Rust and Golem Base
         uses: ./.github/workflows/setup
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v31
+        uses: DeterminateSystems/nix-installer-action@main
 
       - name: Run tests
         run: nix flake check --keep-going -L
@@ -58,4 +61,4 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Preview the generated documentation for this PR at:
-            https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.head_ref }}/arkiv_sdk/
+            https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.head_ref }}/golem_base_sdk/
