--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+        uses: cachix/install-nix-action@v31
 
       - name: Setup Go and Golem Base
         uses: ./.github/workflows/setup
@@ -38,7 +38,7 @@ jobs:
         uses: ./.github/workflows/setup
 
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+        uses: cachix/install-nix-action@v31
 
       - name: Run tests
         run: nix flake check --keep-going -L
