--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.4.0"
 edition = "2024"
 description = "A Rust SDK for interacting with Arkiv."
 license = "GPL-3.0-or-later"
+homepage = "https://github.com/Arkiv-Network/"
+documentation = "https://docs.rs/arkiv_sdk"
+repository = "https://github.com/Arkiv-Network/arkiv-sdk-rust"
 
 [workspace]
 members = ["demo", "test-utils"]
